# M3IM

./: CMakeLists.txt  main.cpp  qml.qrc
M3IM/: CMakeLists.txt  main.cpp  qml.qrc
M3IM/src/: CMakeLists.txt  instancemessenger.cpp  tcp_client.cpp  tcp_client.h
M3IM/tests/: mock_tcp_server.hpp
M3IM/ui/: AddContactWindow.qml  AuthorizationPage.qml  CustomHeader.qml  CustomInput.qml  CustomLabel.qml  FriendsPage.qml  MessagesPage.qml  Settings.qml
sqlite/: CMakeLists.txt
src/: CMakeLists.txt  contacts_model.hpp  dialogs_model.hpp  fake_tcp_client.hpp  instancemessenger.cpp  instancemessenger.h  instancemessenger_global.h  mock_tcp_server.hpp  tcp_client.cpp  tcp_client.h
tests/: CMakeLists.txt  unit_send_request_code.hpp  unit_send_request_contacts.hpp  unit_send_request_jwt.hpp  unit_send_request_presence.hpp
ui/: AddContactPage.qml  AuthorizationPage.qml  CustomButton.qml  CustomInput.qml  FriendsPage.qml  MessagesPage.qml  Settings.qml  main.qml
